--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  http: ^0.13.4
+  http: ^0.13.3
+  provider: ^6.0.1
   flutter:
     sdk: flutter
 
